--- a/LITrevu/static/css/base_styles.css
+++ b/LITrevu/static/css/base_styles.css
@@ -8,10 +8,10 @@
 }
 
 body {
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: 300;
     margin: 20px;
-    padding: 10px;
+    padding: 5px;
     display: flex;
     flex-direction: column;
     min-height: 100vh;
@@ -26,18 +26,19 @@ header {
     padding: 20px;
     background-color: #61787F;
     color: #fff;
+    height: 80px;
 }
 
 header .spacer {
     flex-grow: 1;
-    width: 400px;
+    width: 300px;
 }
 
 header h1 {
     flex: 1;
     text-align: center;
     font-weight: 600;
-    font-size: 2em;
+    font-size: 1.7em;
 }
 
 header nav {
