--- a/LITrevu/static/css/flux.css
+++ b/LITrevu/static/css/flux.css
@@ -18,15 +18,37 @@ h1 {
     justify-content: flex-start;
     align-items: center;
     align-content: center;
+    width: 75%;
     border: 2px solid #ccc; /* Bordure solide */
     border-radius: 5px;     /* Coins arrondis */
     padding: 20px;          /* Espacement intérieur */
     margin-bottom: 20px;    /* Espacement entre les tickets */
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); /* Légère ombre pour effet 3D */
 }
+.author_and_date {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 80%;
+}
+
+.img_and_description {
+    display: flex;
+    flex-direction: row;
+    gap: 20%;
+    width: 80%;
+}
+
+.ticket p {
+    display: flex;
+    align-content: flex-start;
+
+    text-align: justify;
+}
 
 /* Styles pour les reviews */
 .review {
+    width: 75%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -38,11 +60,26 @@ h1 {
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); /* Légère ombre pour effet 3D */
 }
 
+.associated-ticket {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    align-content: center;
+    width: 75%;
+    border: 2px solid #ccc; /* Bordure solide */
+    border-radius: 5px;     /* Coins arrondis */
+    padding: 20px;          /* Espacement intérieur */
+    margin-bottom: 20px;    /* Espacement entre les tickets */
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); /* Légère ombre pour effet 3D */
+}
+
 /* Style de base pour tous les boutons */
 .btn {
     display: inline-block;
     padding: 10px 20px;
     color: white;
+    background-color: #61787F;
     text-decoration: none;
     font-size: 1em;
     border-radius: 5px;
@@ -67,4 +104,35 @@ h1 {
 
 .btn-create-review:hover {
     background-color:  #444f52; /* Vert plus foncé au survol */
+}
+
+.rating {
+    display: inline-block;
+}
+
+.star {
+    font-size: 20px;
+    color: #ddd; /* Couleur pour les étoiles non remplies */
+}
+
+.star.filled {
+    color: #FFD700; /* Couleur pour les étoiles remplies */
+}
+
+.buttons {
+    margin-top: 10px;
+}
+
+.button {
+    display: inline-block;
+    padding: 8px 12px;
+    margin-right: 5px;
+    background-color: #61787F;
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+}
+
+.button:hover {
+    background-color: #45a049;
 }
