reprise des authorisations , de la mise en page et des migrations suite a un ajout qui a engendrer un grand nombre de bug . projet ok

--- a/LITrevu/blog/templates/blog/follow_user.html
+++ b/LITrevu/blog/templates/blog/follow_user.html
@@ -29,7 +29,7 @@
         <h2>Abonnés</h2>
         <ul>
         {% for follow in user_followers %}
-            <p>{{ follow.followed_user.username }}</p>
+            <p>{{ follow.user.username }}</p>
         {% empty %}
             <p>Vous n'êtes suivis par personne.</p>
         {% endfor %}
