--- a/LITrevu/blog/templates/blog/user_posts.html
+++ b/LITrevu/blog/templates/blog/user_posts.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="user-posts">
+    <div class="home">
         <h1>Mes Publications</h1>
         <div class="create-buttons">
             <a href="{% url 'create_ticket' %}" class="btn">Demander une critique</a>
