--- a/LITrevu/static/css/flux.css
+++ b/LITrevu/static/css/flux.css
@@ -1,4 +1,4 @@
-.home {
+.home, .follow_users {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,49 +11,66 @@ h1 {
     font-weight: 300;
     font-size: 1.5em; 
 }
-/* Styles pour les tickets */
-.ticket {
+/* Styles pour les tickets dans flux et post */
+.ticket,
+.associated-ticket {
+    transform: scale(0.8);
+    transform-origin: center;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    align-content: center;
-    width: 75%;
+    width: 60%;
     border: 2px solid #ccc; /* Bordure solide */
     border-radius: 5px;     /* Coins arrondis */
-    padding: 20px;          /* Espacement intérieur */
+    padding: 5px;          /* Espacement intérieur */
     margin-bottom: 20px;    /* Espacement entre les tickets */
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); /* Légère ombre pour effet 3D */
+    background-color: #f9f9f9;
 }
 .author_and_date {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
+    gap: 10px;
     width: 80%;
+    font-weight: 800;
+    font-size: 1.2em; 
+    padding: 4%;
+    border-bottom: 2px solid #ccc;
 }
-
+.ticket h3 {
+    font-size: 1.5em;
+    border-bottom: 2px solid #ccc;
+    padding: 4%;
+    margin: 0;
+}
 .img_and_description {
     display: flex;
+    text-align: start;
     flex-direction: row;
-    gap: 20%;
-    width: 80%;
+    gap: 10%;
+    width: 75%;
+    padding: 4%;
+    border-bottom: 2px solid #ccc;
 }
 
-.ticket p {
+.ticket_p {
     display: flex;
     align-content: flex-start;
-
     text-align: justify;
 }
 
-/* Styles pour les reviews */
+/* Styles pour les reviews dans flux et post */
 .review {
-    width: 75%;
+    transform: scale(0.8);
+    transform-origin: center;
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: center;
     border: 2px solid #ccc; /* Bordure solide */
+    gap: 5px;
     border-radius: 5px;     /* Coins arrondis */
     padding: 20px;          /* Espacement intérieur */
     margin-bottom: 20px;    /* Espacement entre les reviews */
@@ -61,17 +78,21 @@ h1 {
 }
 
 .associated-ticket {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    align-content: center;
-    width: 75%;
-    border: 2px solid #ccc; /* Bordure solide */
-    border-radius: 5px;     /* Coins arrondis */
-    padding: 20px;          /* Espacement intérieur */
-    margin-bottom: 20px;    /* Espacement entre les tickets */
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1); /* Légère ombre pour effet 3D */
+    transform: scale(0.7);
+    transform-origin: center;
+}
+/* Style de base pour tous les boutons */
+.btn {
+    display: inline-block;
+    padding: 10px 20px;
+    color: white;
+    background-color: #61787F;
+    text-decoration: none;
+    font-size: 1em;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 25px; /* Espacement entre les boutons */
+    transition: background-color 0.3s ease; /* Effet de transition pour le survol */
 }
 
 /* Style de base pour tous les boutons */
