--- a/LITrevu/static/css/follow_user.css
+++ b/LITrevu/static/css/follow_user.css
@@ -1,115 +1,31 @@
-/* Style de la page des abonnements */
+/* follow_user page style */
+.follow_user h1 {
+    text-align: center;
+    margin-bottom: 20px;
+}
 
-.following_form,
 .followed_users,
 .followers {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     margin: 20px auto;
-    width: 80%;
-    max-width: 600px;
+    width: 100%;
     text-align: center;
 }
 
-h2 {
-    font-size: 1.5em;
-    margin-bottom: 10px;
-}
-
-.following_form h2 {
-    margin-top: 20px;
-}
-
-.following_form form {
+.followed_user_list,
+.followed_by_list {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-}
-
-.following_form input[type="text"] {
-    padding: 10px;
-    font-size: 1em;
-    width: 60%;
-    max-width: 300px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-}
-
-.following_form button {
-    padding: 10px 20px;
-    font-size: 1em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #61787F;
-    cursor: pointer;
-}
-
-.following_form button:hover {
-    background-color: #ddd;
-}
-
-.followed_users, .followers {
-    margin-top: 30px;
-}
-
-.followed_users ul, .followers ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.followed_users ul li, .followers ul li {
-    display: flex;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 10px;
-    border-top: 1px solid #ddd;
-}
-
-.followed_users ul li:first-child, .followers ul li:first-child {
-    border-top: none;
-}
-
-.followed_users ul li p, .followers ul li p {
-    margin: 0;
-    font-size: 1em;
-    text-align: left;
-}
-
-.followed_users ul li button {
-    padding: 5px 15px;
-    font-size: 0.9em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    cursor: pointer;
-}
-
-.followed_users ul li button:hover {
-    background-color: #ddd;
-}
-
-.followed_users ul, .followers ul {
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    overflow: hidden;
-}
-
-.followed_users ul li, .followers ul li {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 15px;
-}
-
-.followed_users ul li button, .followers ul li button {
-    padding: 5px 10px;
-    font-size: 0.9em;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-    cursor: pointer;
-}
-
-.followed_users ul li button:hover, .followers ul li button:hover {
-    background-color: #ddd;
+    border: 1px solid #ddd; 
+    border-radius: 5px; 
+    background-color: #f9f9f9;
+    width: 80%;
+    height: 50px;
+    gap:0px;
+    margin: 10px;
+    padding: 20px;
 }
