--- a/LITrevu/blog/templates/blog/delete_ticket.html
+++ b/LITrevu/blog/templates/blog/delete_ticket.html
@@ -1,17 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="delete_ticket_container">
-        <h3>Supprimer un billet.</h3>
-        <p>Êtes-vous sûr de vouloir supprimer ce ticket ?</p>
-        <p><strong>{{ ticket.title }}</strong></p>
+    <div class="delete-container">
+        <div class="delete-card">
+            <h1>Supprimer un billet</h1>
+            <p>Êtes-vous sûr de vouloir supprimer ce billet ?</p>
+            <p class="username"><strong>{{ ticket.title }}</strong></p>
 
-        <form method="post" enctype="multipart/form-data">  
-            {{ form.as_p }}
-            {% csrf_token %}
-            <button type="submit">Supprimer</button>
-            <a href="{% url 'home' %}">Annuler</a>
-        </form>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <button type="submit" class="btn danger">Supprimer</button>
+                <a href="{% url 'flux' %}" class="btn cancel">Annuler</a>
+            </form>
+        </div>
     </div>
-    
-{% endblock content %}
+{% endblock %}
