--- a/LITrevu/blog/templates/blog/user_posts.html
+++ b/LITrevu/blog/templates/blog/user_posts.html
@@ -9,33 +9,75 @@
         </div>
         
         {% if is_empty %}
-            <p>Bienvenue ! Créez votre première publication.</p>
+            <p>Bienvenue ! Créez votre premire publication.</p>
         {% else %}
         {% for item in combined_list %}
             {% if item.item_type == 'ticket' %}
             <div class="ticket">
-                <h3>{{ item.title }}</h3>
-                <p>Date : {{ item.time_created|date:"d/m/Y H:i" }}</p>
-                {% if item.image %}
-                    <img src="{{ item.image.url }}" alt="Image du ticket">
-                {% endif %}
-                <p>Description : {{ item.description }}</p>
-                <div class="ticket-actions">
-                    <a href="{% url 'update_ticket' item.id %}" class="btn">Modifier</a>
-                    <a href="{% url 'delete_ticket' item.id %}" class="btn danger">Supprimer</a>
+                <div class="author_and_date">
+                    <p>Créé par : {{ item.user.username }}</p>
+                    <p>Date : {{ item.time_created|date:"d/m/Y H:i" }}</p>
                 </div>
+                <h3>{{ item.title }}</h3>
+                <div class="img_and_description">
+                    {% if item.image %}
+                    <img src="{{ item.image.url }}" alt="Image du ticket">
+                    {% endif %}
+                    <p>Description : {{ item.description }}</p>
+                </div>
+
+                {% if item.user == user %}
+                    <div class="ticket-actions">               
+                            <a href="{% url 'update_ticket' item.id %}" class="btn">Modifier</a>
+                            <a href="{% url 'delete_ticket' item.id %}" class="btn danger">Supprimer</a>
+                    </div>
+                {% endif %}
             </div>
             
             {% elif item.item_type == 'review' %}
             <div class="review">
-                <h2>{{ item.headline }}</h2>
-                <p>Date de création : {{ item.time_created|date:"H:i d/m/Y" }}</p>
-                <p>{{ item.body }}</p>
-                <p>Note: {{ item.rating }}/5</p>
-                <div class="review-actions">
-                    <a href="{% url 'update_review' item.id %}" class="btn">Modifier</a>
-                    <a href="{% url 'delete_review' item.id %}" class="btn danger">Supprimer</a>
+                <!-- Informations de la review -->
+                <div class="review-header">
+                    <p class="review-date">Créé le : {{ item.time_created|date:"H:i d/m/Y" }}</p>
+                    <h2 class="review-title">{{ item.headline }}</h2>
                 </div>
+                <div class="review-content">
+                    <p class="review-body">{{ item.body }}</p>
+                </div>
+                <div class="review-rating">
+                    <p class="review-rating-label">Note :</p>
+                    <div class="review-stars">
+                        {% for _ in item.filled_stars %}
+                            <span class="star filled">★</span>
+                        {% endfor %}
+                        {% for _ in item.empty_stars %}
+                            <span class="star">★</span>
+                        {% endfor %}
+                    </div>
+                </div>
+
+                <!-- Informations du ticket associé -->
+                <div class="associated-ticket">
+                    <div class="author_and_date">
+                        <p>Créé par : {{ item.ticket.user.username }}</p>
+                        <p>Date : {{ item.ticket.time_created|date:"d/m/Y H:i" }}</p>
+                    </div>
+                    <h3>Ticket associé : {{ item.ticket.title }}</h3>
+                    <div class="img_and_description">
+                        {% if item.ticket.image %}
+                        <img src="{{ item.ticket.image.url }}" alt="Image du ticket">
+                        {% endif %}
+                    <p>Description : {{ item.ticket.description }}</p>
+                    </div>
+                </div>
+                
+                <!-- Boutons Modifier et Supprimer uniquement si item a un id -->
+                {% if item.user == user %}
+                    <div class="review-actions">
+                        <a href="{% url 'update_review' item.id %}" class="btn">Modifier</a>
+                        <a href="{% url 'delete_review' item.id %}" class="btn danger">Supprimer</a>
+                    </div>
+                {% endif %}
             </div>
             {% endif %}
         {% endfor %}
