Amelioration visuel pour pages, acces denied et update review

--- a/LITrevu/blog/templates/blog/permission_denied.html
+++ b/LITrevu/blog/templates/blog/permission_denied.html
@@ -1,10 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="permission-denied">
-        <h2>Accès refusé</h2>
-        <p>{{ message }}</p>
-        <a href="{% url 'flux' %}">Retour à l'accueil</a>
+    <div class="permission-denied-container">
+        <h1 class="permission-denied-title">Accès refusé</h1>
+        <p class="permission-denied-message">{{ message }}</p>
+        <a href="{% url 'flux' %}" class="btn">Retour à l'accueil</a>
     </div>
 {% endblock %}
-    
